(31/08) Formulários em React e prop 'key' em listas

--- a/08-forms-react.html
+++ b/08-forms-react.html
@@ -36,7 +36,7 @@
             const [nome, setNome] = React.useState ('')
 
             const handleChange = event => {
-                //document.getElementById ('campo-nome') // Acesso direto
+                //nome = document.getElementById ('campo-nome').value // Acesso direto
                 // nome = event.target.value // Acesso indireto
                 setNome (event.target.value)
                 // Modo JS puro de modificar o conteúdo de um elemento 
